<resources>
    <string name="add_plan_to_calendar">Add current plan to calendar</string>
    <string name="add_meal">Add a new meal to the plan</string>
    <string name="app_name">Food Planner Application</string>
    <string name="meal_image_description">Meal Image</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="default_web_client_id">Y100801290710278628034</string>
    <string name="send_email">Send Email</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="enter_email_password">Please enter email and password.</string>
    <string name="google_sign_in_failed_id_token">Google Sign-in failed: ID token null.</string>
    <string name="google_sign_in_failed">Google Sign-in failed: %s</string>
    <string name="delete_favorite">Delete Favorite</string>
    <string name="guest_user">Guest User</string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="login">Login</string>
    <string name="ingredients">Ingredients:</string>
    <string name="instructions">Instructions:</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="add_to_planned_meals">Add to Planned Meals</string>
    <string name="meal_image">Image of the meal</string>
    <string name="search_icon">Search Icon</string>
    <string name="country_image">Country Image</string>
    <string name="meal_added_to_plan">Meal Added To Plan\n</string>


</resources>